tests/negative/test_func_bad_name.orb
sym (foo:i32 100);

fnc foo () () {};

fnc main () () {};